# my_bot

./: CMakeLists.txt  package.xml
config/: my_robot.lua  view_bot.rviz
controllers/: attraction_map.py
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: cartographer.launch.py
worlds/Basic_Home/: model.config  model.sdf
worlds/Complex_House/: model.config  model.sdf
